Removed debugging printlns and cleaned up code.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,3 +18,5 @@ min-novel-word-count=2
 signature-word-min-ratio=.75
 audio-file-location-base="RecordedAudio"
 audio-combine-file-directory="Combined"
+audio-file-upload-timeout-ms=300000
+google-storage-bucket-name="cs-436-final-project"
