Removed specific keys from configuration.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,22 +1,13 @@
-bot-token="NTYwMTcxNDM3NDUzNzM3OTg4.D3wEwg.liG6j9j49YQs3IqhR0PUUOOb0O4"
+bot-token="[YOUR-BOT-TOKEN-HERE]"
 min-words-for-analysis=100
-authorized-user-id="123203630193967104"
+authorized-user-id="[YOUR-USER-ID-HERE]"
 user-id-nickname-map=[
-  {"123203630193967104":"Ferrin"},
-  {"222210116655513610":"Sleepy"},
-  {"234089583829057537":"Perkie"},
-  {"276407390394515456":"Noble"},
-  {"302528107603165185":"Storm"},
-  {"315533205472018442":"Pars"},
-  {"343917884881371136":"Appendix"},
-  {"358670104424087554":"Fiirce"},
-  {"366695216511713281":"RandomRedneck"},
-  {"398205325330743296":"Smyth"}
-  {"437662514646482975":"Fidel"}
+  {"[USER-ID]":"[CUSTOM-NICKNAME]"},
+  {"[USER-ID2]":"[CUSTOM-NICKNAME2]"},
 ]
 min-novel-word-count=2
 signature-word-min-ratio=.75
 audio-file-location-base="RecordedAudio"
 audio-combine-file-directory="Combined"
 audio-file-upload-timeout-ms=300000
-google-storage-bucket-name="cs-436-final-project"
+google-storage-bucket-name="[YOUR-BUCKET-NAME-HERE]"
